--- a/app/src/main/res/layout/customer_row.xml
+++ b/app/src/main/res/layout/customer_row.xml
@@ -29,9 +29,10 @@
 
     <ImageView
         android:id="@+id/imgSent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:adjustViewBounds="false"/>
 
     <TextView
         android:id="@+id/txtDocument"
